# cifar10_cnn

./: .gitignore  README.md  pyproject.toml  training.py
src/: dataset.py  model.py  train.py  utils.py
