[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "cifar10-classification"
version = "0.1"
authors = [
  { name="Morris Florek", email="morris.benedikt.florek@uni-weimar.de" },
]
description = "Training and evaluation of neural networks for image classification"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "matplotlib",
    "tqdm"
]